--- a/src/styles/config/_reset.scss
+++ b/src/styles/config/_reset.scss
@@ -26,6 +26,7 @@ a:active {
 }
 html,
 body {
+	scroll-behavior: smooth;
 	inline-size: 100%;
 	block-size: 100%;//height: 100%;
 	min-inline-size: 320px;//min-inline-size: global.$min-width + px;	
