--- a/src/styles/base/_hover.scss
+++ b/src/styles/base/_hover.scss
@@ -2,7 +2,7 @@
 @use './../config/mixins' as *;
 @use './../config/css-variables' as *;
 
-/* 
+ 
 .hover-link {
     position: relative;
     transition: color 0.4s ease 0s;
@@ -24,7 +24,7 @@
             width: 100%;
         }
     }
-} */
+} 
 
 //===================
 
