--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -9,14 +9,31 @@
   }
 
   &__top {
-    //display: flex;
-    //justify-content: space-between;
     display: grid;
     grid-template-columns: 195px 365px 1fr;
     column-gap: 145px;
     padding-top: 85px;
     padding-bottom: 50px;
     border-bottom: 3px solid #666;
+    @media (max-width: 1230px){
+      padding-top: 65px;
+      padding-bottom: 50px;
+      grid-template-columns: 195px 315px 1fr;
+      column-gap: 45px;
+    }
+    @media (max-width: 980px){
+      padding-top: 57px;
+      padding-bottom: 40px;
+      grid-template-columns: 199px 395px;
+      grid-template-rows: 125px 48px;
+      column-gap: 80px;
+      row-gap: 45px;
+    }
+    @media (max-width: 650px){
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: 20px 1fr 48px;
+      gap: 40px;
+    }
   }
 
   &__logo {
@@ -24,10 +41,21 @@
   }
 
   &__menu {
+    @media (max-width: 650px){
+      grid-row-start: 2;
+    }
   }
 
   &__social {
     align-self: end;
+    @media (max-width: 980px){
+      grid-column-start: 2;
+      grid-row-start: 2;
+    }
+    @media (max-width: 650px){
+      grid-column-start: 1;
+      grid-row-start: 3;        
+    }
   }
 
   &__bottom {
@@ -40,10 +68,17 @@
     font-size: 22px;
     line-height: 1;
     letter-spacing: 0.09em;
-    
+    @media (max-width: 767.98){
+      padding-top: 40px;
+      padding-bottom: 40px;
+    }
   }
 
-  &__bottom--school,
+  &__bottom--school {
+    @media (max-width: 600px){
+       display: none; 
+    }
+  }
   &__bottom--developer {
   }
 }
@@ -55,6 +90,10 @@
   &__list {
     display: flex;
     column-gap: 150px;
+    @media (max-width: 650px){
+      column-gap: 20px;
+      justify-content: space-around; 
+    }
   }
 
   &__column {
@@ -77,6 +116,13 @@
       justify-content: end;
       flex-wrap: wrap;
       gap: 25px;
+      @media (max-width: 980px){
+         justify-content: start; 
+      }
+      @media (max-width: 650px){
+        gap: 5px;
+        justify-content: center;          
+      }
 		}
 
 		&__item {
