--- a/src/styles/blocks/_explore.scss
+++ b/src/styles/blocks/_explore.scss
@@ -8,7 +8,7 @@
     align-items: start;
     justify-content: space-between;
     gap: 20px;
-    @media (max-width: em(1095)){
+    @media (max-width: 1095px){
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -17,7 +17,7 @@
 	}
 	&__content {
     max-width: 660px;
-    @media (max-width: em(1095)){
+    @media (max-width: 1095px){
       max-width: 100%;
     }
 	}
@@ -26,12 +26,12 @@
     &:not(:last-child) {
       margin-bottom: 75px;
     }
-    @media (max-width: em(1024)){
+    @media (max-width: 1024px){
       &:not(:last-child) {
         margin-bottom: 62px;
       }
     }
-    @media (max-width: em(767.98)){
+    @media (max-width: 767.98px){
       &:not(:last-child) {
         margin-bottom: 40px;
       }    
@@ -45,15 +45,20 @@
     &:not(:last-child) {
       margin-bottom: 25px;
     }
-    @media (max-width: em(767.98)){
+    @media (max-width: 767.98px){
       display: none;        
     }
 	}
+  &__text--hidden {
+    @media (max-width: 1025px){
+      display: none;        
+    }
+  }
 
 	&__images {//440
     max-width: 440px;
-    @media (max-width: em(1024)){
-       max-width: 720px; 
+    @media (max-width: 1024px){
+       max-width: 100%; 
     }
 	}
 }
