--- a/src/styles/blocks/_explore.scss
+++ b/src/styles/blocks/_explore.scss
@@ -5,22 +5,22 @@
   background-color: var(--c-bg-body-dark);
 	&__container {
     display: flex;
-    align-items: start;
     justify-content: space-between;
-    gap: 20px;
-    @media (max-width: 1095px){
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 0;
+    @media (max-width: 1440px){
+      flex-direction: column;
+      align-items: center;
     }
 	}
 	&__content {
     max-width: 660px;
-    @media (max-width: 1095px){
+    @media (max-width: 1440px){
       max-width: 100%;
     }
 	}
+  &__images {
+    height: 700px;
+    width: 720px;
+  }
 
 	&__header-block {
     &:not(:last-child) {
@@ -37,16 +37,16 @@
       }    
     }
 	}
-
 	&__title {
 	}
-
+  &__text {
+    @media (max-width: 767.98){
+      display: none;        
+    }
+  }
 	&__text p {
     &:not(:last-child) {
       margin-bottom: 25px;
-    }
-    @media (max-width: 767.98px){
-      display: none;        
     }
 	}
   &__text--hidden {
@@ -55,12 +55,29 @@
     }
   }
 
-	&__images {//440
-    max-width: 440px;
-    @media (max-width: 1024px){
-       max-width: 100%; 
-    }
-	}
+  &-img {
+    //width: 720px;
+    //height: 700px;
+  }	
+} 
+
+@media (max-width: 1440px) {
+  .explore {
+
+  }
 }
-
-
+@media (max-width: 1023px) {
+  .explore {
+    &__content {
+      width: 100%;
+      p {
+        //display: none;
+      }
+    }
+    &__images {
+      width: 728px;
+      height: 700px;
+      //margin-top: 0;
+    }
+  }
+}
