--- a/src/styles/base/_slider-explore.scss
+++ b/src/styles/base/_slider-explore.scss
@@ -21,28 +21,29 @@
 		}
 
 		&__line-top {
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      left: 61%;
       width: 6px;
       height: calc(50% - 20px);
-      position: absolute;
       background-color: var(--c-slider-comparison);
-      left: 61%;
-      top: 0;
       transform: translateX(-50%);
-      cursor: pointer;
 		}
 
 		&__line-bottom {
+      cursor: pointer;
+      position: absolute;
+      bottom: 0;
+      left: 61%;
       width: 6px;
       height: calc(50% - 20px);
-      position: absolute;
       background-color: var(--c-slider-comparison);
-      left: 61%;
-      bottom: 0;
-      transform: translateX(-50%);
-      cursor: pointer;
+      transform: translateX(-50%);      
 		}
 
 		&__circle {
+      cursor: pointer;
       position: absolute;
       top: 50%;
       left: 61%;
@@ -51,20 +52,20 @@
       border: 6px solid var(--c-slider-comparison);
       transform: translate(-50%, -50%);
       border-radius: 50%;
-      cursor: pointer;
 		}
 
 		&__input {
+      cursor: pointer;
       position: relative;
       appearance: none;
       -webkit-appearance: none;
       width: calc(100% + 40px);
       margin-left: -20px;
-      height: 100%;
-      cursor: pointer;
+      height: 100%;      
       background-color: transparent;
       outline: none;
       &::-webkit-slider-thumb {
+        appearance: none;
         -webkit-appearance: none;
         height: 700px;
         width: 3px;
@@ -77,8 +78,8 @@
 
 @media (max-width: 767.98px) {
   .slider-comparison {
-    width: 100%;
-    height: 368px;
+    //width: 100%;
+    //height: 368px;
       &__img {
         width: 100%;
         height: auto;
