--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,7 +22,7 @@
  @use 'blocks/second';
  @use 'blocks/explore';
  @use 'blocks/video';
-
+ @use 'blocks/gallery';
  
  @use 'blocks/tickets';
  @use 'blocks/parallax';
