--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,3 +1,117 @@
 @use "../config/functions" as *;
 @use "../config/mixins" as *;
 
+.gallery {
+  background-color: var(--c-bg-body-dark);
+  overflow-y: hidden;
+  
+  &__container {
+  }
+
+  &__header-block {
+    margin-bottom: 75px;
+  }
+
+  &__title {
+  }
+
+  &__items {
+    height: 1960px;
+    position: relative;
+  }
+
+  &__inner-container {
+    display: flex;
+    column-gap: 36px;
+  }
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+    margin-top: 52px;
+  }
+
+  &__img {
+    width: 456px;
+    //transform: translate(0px, 50%);
+    //opacity: 0;
+    //transition: all 0.8s ease 0s;
+  }
+
+  &__shadow {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 360px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+  }
+}
+.middle {
+  margin: 0;
+}
+._active-anim {
+  //opacity: 1;
+  //transform: translate(0px, 0px);
+}
+
+/* 
+@media (max-width: 1440px) {
+  .gallery {
+    padding-top: 70px;
+  }
+  .gallery .section-title {
+    margin-bottom: 70px;
+  }
+  .gallery .gallery-column-img {
+    width: 304px;
+  }
+  .gallery-container {
+    height: 1265px;
+  }
+
+}
+
+@media (max-width: 1023px) {
+  .gallery {
+    padding-top: 50px;
+    height: 1221px;
+  }
+  .gallery .section-title {
+    margin-bottom: 45px;
+  }
+  .gallery-inner-container {
+    -webkit-column-gap: 24px;
+       -moz-column-gap: 24px;
+            column-gap: 24px;
+  }
+  .gallery-column:last-child {
+    display: none;
+  }
+  .gallery-column-img {
+    width: 352px !important;
+  }
+
+}
+
+@media (max-width: 767px) {
+  .gallery {
+    padding-top: 45px;
+    height: 757px;
+  }
+  .gallery .section-title {
+    margin-bottom: 42px;
+  }
+  .gallery .gallery-column-img {
+    width: 178px !important;
+  }
+}
+
+@media (max-width: 419px) {
+
+  .gallery .gallery-column-img {
+    width: 100% !important;
+  }
+}
+
+*/
