--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -1,4 +1,3 @@
-//@use "sass:math" as math;
 @use './../config/css-variables' as *;
 //@use './../config/functions' as *;
 @use './../config/mixins' as *;
@@ -23,20 +22,22 @@
 } */
 
 .btn {
+    cursor: pointer;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s;
+
     padding-inline: 36px;
     padding-block: 16px;
     border-radius: 2px;
     background-color: var(--c-dark);
+    color: var(--c-white);
     font-weight: 300;
     font-size: 22px;
     letter-spacing: 0.09em;
     text-align: center;
-    color: var(--c-white);
-    transition: all 0.3s;
     @media (any-hover: hover){
         &:hover{
             background-color: var(--c-font-gold);
