--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -1,2 +1,304 @@
 @use "../config/functions" as *;
 @use "../config/mixins" as *;
+
+.tickets {
+  color: var(--second-color);
+  &__container {
+  }
+  &__header-block {
+    margin-bottom: 75px;
+  }
+  &__title {
+  }
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 60px;
+  }
+  &__image {
+    width: 720px;
+    height: 550px;
+  }
+  &__img {
+  }
+  &__booking {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 200px;
+  }
+  &__column {
+
+    &--flex-end {
+      //justify-content: end;
+    }
+
+  }
+  &__type {
+  }
+  &__type-title {
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 50px;
+  }
+  &__amount {
+    display: flex;
+    flex-direction: column;
+  }
+  &__input {
+  }
+
+  &__btn {
+  }
+}
+.amount {
+  max-width: 155px;
+  &__title {
+    margin-bottom: 25px;
+    text-align: end;
+    font-weight: 700;
+    font-size: 28px;
+  }
+  &__subtitle {
+    margin-bottom: 13px;
+    font-weight: 300;
+    font-size: 22px;
+  }
+  &__number-wrap {
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 3px 0;
+    margin-bottom: 10px;
+    border: 3px solid #000;
+  }
+  &__number {
+    text-align: center;
+    border: none;
+    outline: none;
+
+    &--basic {
+    }
+    &--senior {
+    }
+  }
+  &__price {
+    margin-top: 35px;
+    margin-bottom: 58px;
+    font-weight: 300;
+    font-weight: 700;
+    font-size: 28px;
+    letter-spacing: 1.65px;
+  }
+}
+.input-container {
+  position: relative;
+  display: block;
+  padding-left: 40px;
+  margin-bottom: 23px;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 22px;
+  user-select: none;
+}
+.input-container input {
+  display: none;
+}
+.checkmark {
+  position: absolute;
+  top: 5px;
+  left: 0;
+  height: 17px;
+  width: 17px;
+  background-color: transparent;
+  border: 1px solid #000;
+  border-radius: 50%;
+}
+.checkmark:hover {
+  background-color: #dadada;
+}
+
+.checkmark::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  display: none;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.tickets input:checked ~ .checkmark:after {
+  display: block;
+}
+.amount button {
+  background: none;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-weight: 400;
+  font-size: 32px;
+  cursor: pointer;
+}
+
+/* 
+
+@media (max-width: 1440px) {
+  .tickets {
+    padding-top: 70px;
+    padding-bottom: 60px;
+  }
+  .tickets .section-title {
+    padding-bottom: 30px;
+    margin-bottom: 60px;
+  }
+  .tickets-img {
+    width: 700px;
+    height: 440px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .tickets-type {
+    display: none;
+  }
+  .tickets .settings-title {
+    text-align: inherit;
+  }
+  .tickets-content {
+    -webkit-box-pack: start;
+    -webkit-justify-content: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  .tickets-amount {
+    margin-left: 80px;
+  }
+  .tickets-amount .settings-title {
+    margin-bottom: 28px;
+  }
+  .tickets-amount .amount-title {
+    margin-bottom: 8px;
+  }
+  .tickets-amount .number-wrap {
+    padding-right: 5px;
+    margin-bottom: 29px;
+    width: 175px;
+  }
+  .tickets-amount .number-wrap .number {
+    padding-left: 20px;
+  }
+  .tickets .price {
+    margin-top: -7px;
+  }
+  .tickets .price span {
+    margin-left: 5px;
+  }
+  .tickets .buy {
+    bottom: 0;
+    right: 27px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .tickets {
+    padding-top: 47px;
+    padding-bottom: 72px;
+  }
+  .tickets .section-title {
+    margin-bottom: 40px;
+  }
+  .tickets-img {
+    width: 444px;
+    height: 340px;
+  }
+  .tickets-amount {
+    margin-left: 60px;
+  }
+  .tickets-amount .settings-title {
+    margin-bottom: 36px;
+  }
+  .tickets-amount .number-wrap {
+    margin-bottom: 24px;
+  }
+  .tickets-amount .number-wrap .number {
+    padding-left: 5px;
+  }
+  .tickets .price {
+    margin-top: 13px;
+  }
+  .tickets .buy {
+    right: 47px;
+    bottom: -33px;
+  }
+
+}
+
+@media (max-width: 767px) {
+  .tickets .section-title {
+    padding-bottom: 24px;
+  }
+  .tickets-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .tickets-img {
+    width: 100%;
+    height: 160px;
+  }
+  .tickets-amount {
+    margin: 0;
+  }
+  .tickets-amount .amount-title {
+    font-size: 16px;
+    margin-bottom: 14px;
+  }
+  .tickets-amount .number-wrap {
+    margin-bottom: 19px;
+  }
+  .tickets-settings {
+    margin-top: 40px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .tickets .settings-title {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  .tickets .price {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 0px;
+  }
+  .tickets .price span {
+    margin-left: 0;
+  }
+  .tickets .buy {
+    right: 102px;
+    font-size: 16px;
+    padding: 16px 50px;
+  }
+}
+
+@media (max-width: 419px) {
+  .tickets .buy {
+    padding: 16px 37px;
+    right: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+
+
+*/
