feat: add adaptiv footer, welcome

--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -4,6 +4,7 @@
 .welcome {
   background-color: var(--c-bg-body-dark);
   width: 100%;
+  padding-top: 0;
   padding-bottom: 0;
   &__container {
       position: relative;
