--- a/src/styles/config/_setting.scss
+++ b/src/styles/config/_setting.scss
@@ -3,6 +3,7 @@
 @use "variables" as global;
 @use 'css-variables' as *;
 
+/* 
 .sr-only { // visually-hidden
 	display: block;
 	width: 1px !important;
@@ -13,7 +14,7 @@
 	clip: rect(0, 0, 0, 0) !important;
 	white-space: nowrap !important;
 	border: 0 !important
-}
+} */
 body {
 	font-weight: var(--f-font-weight);
 	color: var(--main-color);
