--- a/src/styles/blocks/_explore.scss
+++ b/src/styles/blocks/_explore.scss
@@ -18,14 +18,15 @@
     }
 	}
   &__images {
-    height: 700px;
+    //height: 700px;
     width: 720px;
     @media (max-width: 767.98px){
       width: 100%;
-      height: 368px;
+      //height: 368px;
+      //height: auto;
     }
     @media (max-width: 420px){
-      height: 280px;
+      //height: 280px;
     }
   }
 
@@ -48,6 +49,9 @@
 	&__title {
 	}
   &__text {
+    @media (max-width: 1440px) {
+      margin-bottom: 60px;
+    }
     @media (max-width: 780px){
       display: none;        
     }
