--- a/src/styles/config/_setting.scss
+++ b/src/styles/config/_setting.scss
@@ -106,7 +106,7 @@ body.lock {
 	}
 } */
 
-/* 
+
 .ibg {
 	position: relative;
 	img {
@@ -122,7 +122,7 @@ body.lock {
 			object-fit: contain;
 		}
 	}
-} */
+} 
  /* 
 .gradient-text {
 	background: var(--gradient-color);//можно использовать фото
