--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -7,6 +7,12 @@
   }
   &__header-block {
     margin-bottom: 75px;
+    @media (max-width: 1024px){
+       margin-bottom: 60px; 
+    }
+    @media (max-width: 768px){
+       margin-bottom: 40px; 
+    }
   }
   &__title {
   }
@@ -14,10 +20,35 @@
     display: flex;
     justify-content: space-between;
     column-gap: 60px;
+    @media (max-width: 1024px){
+      column-gap: 80px;
+      justify-content: start;
+    }
+    @media (max-width: 768px){
+      column-gap: 60px;
+    }
+    @media (max-width: 710px){
+       flex-direction: column;
+       gap: 40px; 
+    }
   }
   &__image {
     width: 720px;
     height: 550px;
+    @media (max-width: 1024px){
+       width: 700px;
+       height: 440px; 
+    }
+    @media (max-width: 1000px){
+       width: 480px;
+    }
+    @media (max-width: 768px){
+       width: 444px;
+       height: 340px; 
+    }
+    @media (max-width: 710px){
+      width: 100%;
+    }
   }
   &__img {
   }
@@ -25,15 +56,23 @@
     display: flex;
     justify-content: space-between;
     column-gap: 200px;
+    @media (max-width: 1024px){
+      column-gap: 0;
+    }
+    @media (max-width: 710px){
+       justify-content: center; 
+    }
   }
   &__column {
 
     &--flex-end {
-      //justify-content: end;
     }
 
   }
   &__type {
+    @media (max-width: 1024px){
+       display: none; 
+    }
   }
   &__type-title {
     font-weight: 700;
@@ -43,6 +82,9 @@
   &__amount {
     display: flex;
     flex-direction: column;
+    @media (max-width: 710px){
+      align-items: center;
+    }
   }
   &__input {
   }
@@ -144,161 +186,3 @@
   cursor: pointer;
 }
 
-/* 
-
-@media (max-width: 1440px) {
-  .tickets {
-    padding-top: 70px;
-    padding-bottom: 60px;
-  }
-  .tickets .section-title {
-    padding-bottom: 30px;
-    margin-bottom: 60px;
-  }
-  .tickets-img {
-    width: 700px;
-    height: 440px;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .tickets-type {
-    display: none;
-  }
-  .tickets .settings-title {
-    text-align: inherit;
-  }
-  .tickets-content {
-    -webkit-box-pack: start;
-    -webkit-justify-content: start;
-        -ms-flex-pack: start;
-            justify-content: start;
-  }
-  .tickets-amount {
-    margin-left: 80px;
-  }
-  .tickets-amount .settings-title {
-    margin-bottom: 28px;
-  }
-  .tickets-amount .amount-title {
-    margin-bottom: 8px;
-  }
-  .tickets-amount .number-wrap {
-    padding-right: 5px;
-    margin-bottom: 29px;
-    width: 175px;
-  }
-  .tickets-amount .number-wrap .number {
-    padding-left: 20px;
-  }
-  .tickets .price {
-    margin-top: -7px;
-  }
-  .tickets .price span {
-    margin-left: 5px;
-  }
-  .tickets .buy {
-    bottom: 0;
-    right: 27px;
-  }
-}
-
-@media (max-width: 1023px) {
-  .tickets {
-    padding-top: 47px;
-    padding-bottom: 72px;
-  }
-  .tickets .section-title {
-    margin-bottom: 40px;
-  }
-  .tickets-img {
-    width: 444px;
-    height: 340px;
-  }
-  .tickets-amount {
-    margin-left: 60px;
-  }
-  .tickets-amount .settings-title {
-    margin-bottom: 36px;
-  }
-  .tickets-amount .number-wrap {
-    margin-bottom: 24px;
-  }
-  .tickets-amount .number-wrap .number {
-    padding-left: 5px;
-  }
-  .tickets .price {
-    margin-top: 13px;
-  }
-  .tickets .buy {
-    right: 47px;
-    bottom: -33px;
-  }
-
-}
-
-@media (max-width: 767px) {
-  .tickets .section-title {
-    padding-bottom: 24px;
-  }
-  .tickets-content {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .tickets-img {
-    width: 100%;
-    height: 160px;
-  }
-  .tickets-amount {
-    margin: 0;
-  }
-  .tickets-amount .amount-title {
-    font-size: 16px;
-    margin-bottom: 14px;
-  }
-  .tickets-amount .number-wrap {
-    margin-bottom: 19px;
-  }
-  .tickets-settings {
-    margin-top: 40px;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .tickets .settings-title {
-    text-align: center;
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
-  .tickets .price {
-    margin-top: 20px;
-    text-align: center;
-    font-size: 16px;
-    letter-spacing: 0px;
-  }
-  .tickets .price span {
-    margin-left: 0;
-  }
-  .tickets .buy {
-    right: 102px;
-    font-size: 16px;
-    padding: 16px 50px;
-  }
-}
-
-@media (max-width: 419px) {
-  .tickets .buy {
-    padding: 16px 37px;
-    right: 0;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-  }
-}
-
-
-*/
