feat:add slider video

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@
  @use 'blocks/hero';
  @use 'blocks/second';
  @use 'blocks/explore';
+ @use 'blocks/slider-videoAPI';
  @use 'blocks/video';
  @use 'blocks/gallery'; 
  @use 'blocks/tickets';
