--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -59,8 +59,8 @@
 
   &__img {
     //javascript
-    //transform: translate(0px, 50%);
-    //opacity: 0;
+    transform: translate(0px, 50%);
+    opacity: 0;
     transition: all 0.8s ease 0s;
     width: 456px;
     @media (max-width: 1024px){
@@ -84,6 +84,6 @@
 }
 
 .animation-gallery {
-  //opacity: 1;
-  //transform: translate(0px, 0px);
+  opacity: 1;
+  transform: translate(0px, 0px);
 }
