--- a/src/styles/blocks/_video.scss
+++ b/src/styles/blocks/_video.scss
@@ -1,6 +1,9 @@
 @use "../config/functions" as *;
 @use "../config/mixins" as *;
 
+@use 'video/slider-videoAPI';
+//@use 'video/slider-video';
+
 .video__btn:hover,
 .video__btn_big:hover {
   cursor: pointer;
@@ -270,6 +273,7 @@
   &__slider {
   }
 }
+/* 
 .slider-video {
 
   &__wrapper {
@@ -339,4 +343,4 @@
   &_active {
     background-color: #333;
   }
-}
+} */
