fix: slider video

--- a/src/styles/blocks/_video.scss
+++ b/src/styles/blocks/_video.scss
@@ -1,59 +1,12 @@
 @use "../config/functions" as *;
 @use "../config/mixins" as *;
-
+@use 'video/main-video';
 @use 'video/slider-videoAPI';
-//@use 'video/slider-video';
 
-.video__btn:hover,
-.video__btn_big:hover {
-  cursor: pointer;
-  filter: invert(57%) sepia(9%) saturate(1301%) hue-rotate(356deg) brightness(94%) contrast(87%);
-}
-.video__btn_pause {
-  width: 23px;
-  height: 30px;
-  background-image: url(../assets/svg/pause.svg);
-  @media (max-width: 1024px){
-    width: 23px;
-    background-size: 100% 100%;
-  }  
-  @media (max-width: 420px){
-    width: 14px;
-    height: 14px;
-  }
-}
-//==============================
-.range {
-  align-self: center;
-  border-radius: 0;
-  height: 8px;
-  outline: none;
-  transition: background 450ms ease-in;
-  appearance: none;
-   @media (max-width: 1024px){
-    height: 5px;
-   }
-}
-.range::-webkit-slider-thumb {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  -webkit-appearance: none;
-  cursor: pointer;
-  background: #fff;
-  @media (max-width: 420px){
-    width: 10px;
-    height: 10px;
-  }
-}
-.btn_hidden {
-  display: none;
-}
+
 .video {
-
-  &__video-section {
+  &__container {
   }
-
   &__header-block {
     display: flex;
     margin-bottom: 75px;
@@ -83,264 +36,9 @@
       display: none; 
     }
   }
-
-  &__mock {
-    position: relative;
-    margin-bottom: 40px;//до слайдера
+  &__main-player {
+    margin-bottom: 40px;
   }
-
-  &__image {
-    width: 100%;
-    height: 100%;
-    //padding-bottom: 86px;
-    //display: block;
-  }
-
-  &__btn {
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    width: 38px;
-    height: 38px;
-    background-color: transparent;
-    border: none;
-    transition-property: filter;
-    transition-duration: 0.8s;
-
-    &_big {
-      bottom: 0;
-      position: absolute;
-      background-image: url(../assets/svg/main-play.svg);
-      width: 220px;
-      height: 220px;
-      background-color: transparent;
-      border: none;
-      background-repeat: no-repeat;
-      top: 50%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-      transition-property: filter;
-      transition-duration: 0.8s;
-      @media (max-width: 1024px){
-        width: 152px;
-        height: 152px;
-        background-size: 152px 152px;            
-      }
-      @media (max-width: 767.98px){
-        width: 80px;
-        height: 80px;
-        background-size: 100% 100%;
-      }
-      @media (max-width: 420px){
-        width: 50px;
-        height: 50px;
-      }
-    }
-
-    &_pause {
-      width: 23px;
-      height: 30px;
-      background-image: url(../assets/svg/play.svg);
-    }
-
-    &_pausep {
-      background-image: url(../assets/svg/pause.svg);
-    }
-
-    &_volume {//????
-      align-self: center;
-      width: 38px;
-      height: 30px;
-      background-image: url(../assets/svg/volume.svg);
-      @media (max-width: 1024px){
-        width: 26px;
-        height: 20px;
-        background-size: 100% 100%;
-      }
-      @media (max-width: 767.98px){
-        order: 2;
-      }
-      @media (max-width: 420px){
-        width: 18px;
-        height: 14px;
-      } 
-      /* 
-      background: linear-gradient(to right, #710707 0%, #710707 0%, #c4c4c4 0%, #c4c4c4 100%);
-      @media (max-width: 767.98px){
-        position: absolute;
-        top: -4px;
-        width: 100%;
-        left: -2px;
-      } */ 
-
-    }
-
-    &_full {
-      width: 36px;
-      height: 36px;
-      background-image: url(../assets/svg/fullscreen.svg);
-      @media (max-width: 1024px){
-        width: 26px;
-        height: 26px;
-        background-size: 100% 100%;
-      }
-      @media (max-width: 767.98px){
-        order: 4;
-      }
-      @media (max-width: 420px){
-        width: 18px;
-        height: 18px;
-      }
-
-    }
-
-    &_mute {
-      background-image: url(../assets/svg/mute.svg);
-    }
-  }
-
-  &__speed {
-    position: absolute;
-    bottom: 20%;
-    color: #eee;
-    font-family: 'Roboto';
-    right: 10%;
-    font-size: x-large;
-    visibility: hidden;
-    transition: all 0.8s;
-  }
-
-  &__settings {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    box-sizing: border-box;
-    //======================
-    padding: 25px 30px;
-    display: flex;
-    column-gap: 50px;
-    justify-content: space-between;
-    background-color: #000;
-    @media (max-width: 1024px){
-      position: relative;
-      padding: 15px 40px;
-      column-gap: 30px;
-    }
-    @media (max-width: 767.98px){
-      padding: 14px 30px;
-    }
-    @media (max-width: 420px){
-      padding: 17px 20px; 
-    }
-  }
-
-  &__state {
-    display: flex;
-    column-gap: 41px;
-  }
-
-  &__progress {
-    background: linear-gradient(to right, #710707 0%, #710707 0%, #c4c4c4 0%, #c4c4c4 100%);
-    //============
-    width: 70%;
-    @media (max-width: 767.98px){
-      order: 3;
-    }
-  }
-
-  &__volume {
-    width: 155px;
-    background: linear-gradient(to right, #710707 0%, #710707 0%, #c4c4c4 0%, #c4c4c4 100%);
-    @media (max-width: 767.98px){
-      position: absolute;
-      top: -4px;
-      width: 100%;
-      left: -2px;
-    }
-    /* @media (max-width: 767.98px){
-      position: absolute;
-      top: 0;
-      width: 100%;
-      left: 0;
-     }*/
-  }
-}
-
-
-
-.video {
-
   &__slider {
   }
 }
-/* 
-.slider-video {
-
-  &__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  &__slide {
-    //width: 452px;
-    //height: 254px;
-    aspect-ratio: 452 / 254;
-    margin-bottom: 40px;//до буллетов
-    @media (max-width: 768px){
-       margin-bottom: 20px; 
-    }
-    @media (max-width: 425px){
-       margin-bottom: 40px; 
-    }
-  }
-
-  &__controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 20px;
-  }
-
-  &__pagination {
-    display: flex;
-    align-items: center;
-    column-gap: 20px;
-  }
-
-  &__button {
-    //background-color: transparent;
-    //box-sizing: border-box;
-    //border: none;
-    //outline: none;
-    //background-repeat: no-repeat;
-    width: 10px;
-    height: 12px;
-    cursor: pointer;
-    //transition: all 0.3s;
-    @media (max-width: 420px){
-      width: 8px;
-      height: 8px;
-      //background-size: 100% 100%; 
-    }
-  }
-
-  &__button-next {
-    background-image: url(../assets/svg/video-arr-left.svg);
-  }
-
-  &__button-prev {
-    background-image: url(../assets/svg/video-arr-right.svg);
-  }
-}
-.slider-dot {
-  cursor: pointer;
-  width: 12px;
-  height: 12px;
-  border-radius: 100%;
-  background-color: #999;
-
-  &_active {
-    background-color: #333;
-  }
-} */
