--- a/src/styles/blocks/video/_slider-videoAPI.scss
+++ b/src/styles/blocks/video/_slider-videoAPI.scss
@@ -53,7 +53,7 @@
     left: 50%;
     width: 60px;
     height: 60px;
-    background: url('../../assets/svg/play.svg') no-repeat center center;
+    background: url('../assets/svg/play.svg') no-repeat center center;
     background-size: 60% 60%;
     border: none;
     transform: translate(-50%, -50%);
