--- a/src/styles/blocks/video/_main-video.scss
+++ b/src/styles/blocks/video/_main-video.scss
@@ -40,14 +40,14 @@
   &__play-btn {
     width: 23px;
     height: 31px;
-    background: url('../../assets/svg/play.svg') center / cover no-repeat;
+    background: url('../assets/svg/play.svg') center / cover no-repeat;
     &.pause {
-      background: url('../../assets/svg/pause.svg') center / cover no-repeat;
+      background: url('../assets/svg/pause.svg') center / cover no-repeat;
     }
   }
 
   &__big-btn {
-    background: url('../../assets/svg/main-play.svg') center / cover no-repeat;
+    background: url('../assets/svg/main-play.svg') center / cover no-repeat;
     background-size: contain;
     position: absolute;
     top: 50%;
@@ -62,22 +62,22 @@
   &__mute {
     width: 38px;
     height: 31px;
-    background: url('../../assets/svg/volume.svg') center / cover no-repeat;
+    background: url('../assets/svg/volume.svg') center / cover no-repeat;
     &.muted {
-      background: url('../../assets/svg/mute.svg') center / cover no-repeat;
+      background: url('../assets/svg/mute.svg') center / cover no-repeat;
     }
   }
 
   &__fullscreen {
     width: 36px;
     height: 36px;
-    background: url('../../assets/svg/fullscreen.svg') center / cover no-repeat;
+    background: url('../assets/svg/fullscreen.svg') center / cover no-repeat;
   }
 
   &__fullscreen-exit {
     width: 36px;
     height: 36px;
-    background: url('../../assets/svg/fullscreen_exit.svg') center / cover no-repeat;
+    background: url('../assets/svg/fullscreen_exit.svg') center / cover no-repeat;
   }
 
   &__progress,
