feat: add adaptive header

--- a/src/styles/base/_hover.scss
+++ b/src/styles/base/_hover.scss
@@ -27,7 +27,7 @@
 } 
 
 //===================
-
+/* 
 .hover-link2 {
     //font-size: 17px;
     //background: transparent;
@@ -69,7 +69,7 @@
     transition-delay: 0.4s;
     color: var(--accent-color);
 } 
-  
+ */
 
 /* 
 .hover-img {
