--- a/src/styles/blocks/_common.scss
+++ b/src/styles/blocks/_common.scss
@@ -39,13 +39,13 @@
     &--white {
         color: var(--c-white);
     }
-    @media (max-width: em(1024)){
+    @media (max-width: 1024px){
         font-size: 50px; 
     }
-    @media (max-width: em(767.98)){
+    @media (max-width: 767.98px){
         font-size: 40px;
     }
-    @media (max-width: em(450)){
+    @media (max-width: 450px){
         font-size: 28px;
     }
   }
