--- a/src/styles/base/_popup.scss
+++ b/src/styles/base/_popup.scss
@@ -48,7 +48,7 @@
         top: 10px;
         right: 10px;
         font-size: 20px;
-        color: #c2410c;
+        color: #030303;
         text-decoration: none;
     }
     &__title {
