fix: add new images

--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -82,6 +82,9 @@
     
   }
 }
+.welcome__content.menu-open {//only project museum louvre, revove this instruction
+    z-index: 1;
+}
 .slider-welcome {
 
   &__swiper {
