--- a/src/styles/blocks/video/_main-video.scss
+++ b/src/styles/blocks/video/_main-video.scss
@@ -6,7 +6,6 @@
   &__wrapper {
     position: relative;
     aspect-ratio: 1440 / 650;
-    //padding-bottom: 56.25%; /* Соотношение сторон 16:9 */
     overflow: hidden;
 	}
 
@@ -35,6 +34,13 @@
     align-items: center;
     justify-content: space-between;
     column-gap: 16px;
+    @media (max-width: 1024px){
+      padding: 15px 40px;
+    }
+    @media (max-width: 768px){
+      padding: 15px 30px 10px 30px;
+      position: relative;
+    }
   }
 
   &__play-btn {
@@ -43,6 +49,10 @@
     background: url('../assets/svg/play.svg') center / cover no-repeat;
     &.pause {
       background: url('../assets/svg/pause.svg') center / cover no-repeat;
+    }
+    @media (max-width: 1024px){
+      width: 23px;
+      height: 30px; 
     }
   }
 
@@ -57,6 +67,15 @@
     transform: translate(-50%, -50%);
     z-index: 5;
     display: block;
+    @media (max-width: 1024px){
+       width: 150px;
+       height: 150px; 
+    }
+    @media (max-width: 768px){
+       width: 80px;
+       height: 80px; 
+       
+    }
   }
 
   &__mute {
@@ -66,18 +85,30 @@
     &.muted {
       background: url('../assets/svg/mute.svg') center / cover no-repeat;
     }
+    @media (max-width: 1024px){
+      width: 26px;
+      height: 20px; 
+    }
   }
 
   &__fullscreen {
     width: 36px;
     height: 36px;
     background: url('../assets/svg/fullscreen.svg') center / cover no-repeat;
+    @media (max-width: 1024px){
+       width: 26px;
+       height: 26px; 
+    }
   }
 
   &__fullscreen-exit {
     width: 36px;
     height: 36px;
     background: url('../assets/svg/fullscreen_exit.svg') center / cover no-repeat;
+    @media (max-width: 1024px){
+       width: 26px;
+       height: 26px; 
+    }
   }
 
   &__progress,
@@ -94,20 +125,28 @@
   &__progress::-webkit-slider-thumb,
   &__volume::-webkit-slider-thumb {
     border-radius: 50px;
-    width: 15px;
-    height: 15px;
+    width: 13px;
+    height: 13px;
     -webkit-appearance: none;
     cursor: ew-resize;
     background: #fff;
   }
   &__progress {
     width: 63%;
-    //width: 930px;
+    @media (max-width: 768px){
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 5px;
+    }
   }
 
   &__volume {
     width: 11%;
-    //width: 155px;
+    @media (max-width: 768px){
+      width: 80%;
+    }
   }
 
   &__speed {
@@ -124,4 +163,27 @@
   }
 }
 
+/* 
+import customMainVideoPlayer from "./section-video/customMainVideoPlayer";
+
+<div class="video__main-player main-player">
+  <div class="main-player__wrapper">
+    <video class="main-player__video" preload="none">
+      <source src="assets/video/video0.mp4" type="video/mp4">
+      <source src="assets/video/video0.webm" type="video/webm">
+      Ваш браузер не поддерживает видео.
+    </video>
+    <img class="main-player__preloader" src="assets/video/poster0.webp" alt="Loading" loading="lazy">
+    <button class="main-player__big-btn"></button>
+  </div>
+  <div class="main-player__setting" id="setting">
+    <button class="main-player__play-btn"></button>
+    <input class="main-player__progress" type="range" value="0" step="0.1" min="0" max="100">
+    <button class="main-player__mute"></button>
+    <input class="main-player__volume" type="range" min="0" max="1" step="0.01" value="0.4">
+    <button class="main-player__fullscreen"></button>
+  </div>
+  <div class="main-player__speed">1x</div>
+</div>
+*/
 
