fix: remove big scripts

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
  @use 'blocks/video';
  @use 'blocks/gallery'; 
  @use 'blocks/tickets';
+ @use 'blocks/booking';
  @use 'blocks/parallax';
  @use 'blocks/contacts';
 
