--- a/src/styles/base/_popup.scss
+++ b/src/styles/base/_popup.scss
@@ -1,5 +1,5 @@
 
-.popup {
+.popup {//overlay
     position: fixed;
     width: 100%;
     height: 100%;
@@ -13,7 +13,7 @@
     transition: all 0.8s ease 0s;
     &__image {
         img {
-            max-width: 100%;
+            //max-width: 100%;
         }
     }
     &__body {
@@ -45,16 +45,16 @@
     }
     &__close {
         position: absolute;
-        top: 10px;
-        right: 10px;
-        font-size: 20px;
+        top: 30px;
+        right: 30px;
+        font-size: 25px;
         color: #030303;
         text-decoration: none;
     }
     &__title {
-        font-size: 40px;
+        //font-size: 40px;
         &:not(:last-child) {
-           margin-bottom: 16px;
+           //margin-bottom: 16px;
         }
     }
     &__text {
