feat: add adaptive tickets

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,8 +1,8 @@
-
-// @use 'scrollUp';
+ @use 'form';
+ @use 'scrollUp';
 // @use 'timer-countdown';
 // @use 'tabs';
-// @use 'popup';
+ @use 'popup';
 // @use 'spollers';
  @use 'hover';
  @use 'button';
