--- a/src/styles/base/_popup.scss
+++ b/src/styles/base/_popup.scss
@@ -1,6 +1,7 @@
 
 .popup {//overlay
     position: fixed;
+    z-index: 12;//больше scrollUp
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
@@ -11,37 +12,26 @@
     overflow-y: auto;
     overflow-x: hidden;
     transition: all 0.8s ease 0s;
-    &__image {
-        img {
-            //max-width: 100%;
-        }
-    }
+
     &__body {
         min-height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 30px 10px;
+        //padding: 30px 10px;
     }
+
     &__content {
         position: relative;
-        background-color: #fff;
-        color: #000;
-        max-width: 800px;
-        padding: 30px;
         transition: all 0.8s ease 0s;
         opacity: 0;
         transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
         //transform: scale(0);
-        &-image {
-            padding: 0;
-        }
-        a {
-            margin-bottom: 10px;
-        }
-        &__video {
-            padding: 0;
-        }
+
+        background-color: #fff;
+        //color: #000;
+        //max-width: 800px;
+        padding: 16px;
     }
     &__close {
         position: absolute;
@@ -50,14 +40,6 @@
         font-size: 25px;
         color: #030303;
         text-decoration: none;
-    }
-    &__title {
-        //font-size: 40px;
-        &:not(:last-child) {
-           //margin-bottom: 16px;
-        }
-    }
-    &__text {
     }
 }
 .popup.open {//.popup:target
