--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -6,183 +6,170 @@
   &__container {
   }
   &__header-block {
-    margin-bottom: 75px;
-    @media (max-width: 1024px){
-       margin-bottom: 60px; 
-    }
-    @media (max-width: 768px){
-       margin-bottom: 40px; 
-    }
+    @include adaptive-clamp("margin-bottom", 75, 40);
   }
   &__title {
   }
   &__content {
-    display: flex;
-    justify-content: space-between;
-    column-gap: 60px;
-    @media (max-width: 1024px){
-      column-gap: 80px;
-      justify-content: start;
-    }
-    @media (max-width: 768px){
-      column-gap: 60px;
-    }
-    @media (max-width: 710px){
-       flex-direction: column;
-       gap: 40px; 
+    display: grid;
+    grid-template-columns: 50% 45%;
+    @include adaptive-clamp("gap", 60, 30);
+    @media (max-width: em(920)){
+       grid-template-columns: auto;
     }
   }
   &__image {
-    width: 720px;
-    height: 550px;
-    @media (max-width: 1024px){
-       width: 700px;
-       height: 440px; 
+    max-width: 720px;
+    width: 100%;
+    @media (max-width: em(920)){
+      margin: 0 auto;        
     }
-    @media (max-width: 1000px){
-       width: 480px;
+    @media (max-width: em(767.98)){
+       max-width: 500px; 
     }
-    @media (max-width: 768px){
-       width: 444px;
-       height: 340px; 
+    @media (max-width: em(550)){
+       max-width: 380px; 
     }
-    @media (max-width: 710px){
-      width: 100%;
+    @media (max-width: em(425)){
+       max-width: 280px; 
     }
-  }
-  &__img {
   }
   &__booking {
     display: flex;
+    flex-wrap: wrap; 
     justify-content: space-between;
-    column-gap: 200px;
-    @media (max-width: 1024px){
-      column-gap: 0;
+    gap: 20px;
+    @media (max-width: em(920)){
+      justify-content: space-around;
     }
-    @media (max-width: 710px){
+    @media (max-width: em(500)){
+       flex-direction: column;
+       align-items: center;
        justify-content: center; 
     }
-  }
-  &__column {
-
-    &--flex-end {
-    }
-
-  }
-  &__type {
-    @media (max-width: 1024px){
-       display: none; 
-    }
-  }
-  &__type-title {
-    font-weight: 700;
-    font-size: 28px;
-    margin-bottom: 50px;
   }
   &__amount {
     display: flex;
     flex-direction: column;
-    @media (max-width: 710px){
-      align-items: center;
-    }
   }
-  &__input {
+}
+.slider-tickets {
+
+  &__swiper {
   }
 
-  &__btn {
+  &__wrapper {
+
+  }
+
+  &__slide {
+    aspect-ratio: 720 / 550;
+    position: relative;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.type-tickets {
+
+  &__title {
+    font-weight: 700;
+    font-size: 28px;
+    @include adaptive-clamp("margin-bottom", 50, 25);
+  }
+
+  &__label {
+    display: flex;
+    align-items: center;  
+    gap: 16px;
+    &:not(:last-child) {
+      margin-bottom: 25px;
+    }
+  }
+
+  &__span {
+  }
+
+  &__input {
+
+    &--radio {
+      width: 17px;
+      height: 17px;
+      background-color: transparent;
+      border: 1px solid #000;
+      border-radius: 50%;
+    }
   }
 }
 .amount {
-  max-width: 155px;
   &__title {
     margin-bottom: 25px;
     text-align: end;
     font-weight: 700;
     font-size: 28px;
+    @media (max-width: em(500)){
+     text-align: start; 
+    }
   }
+
   &__subtitle {
     margin-bottom: 13px;
-    font-weight: 300;
-    font-size: 22px;
   }
-  &__number-wrap {
+
+  &__stepper {
     width: 150px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 3px 0;
+    padding: 3px 5px;
     margin-bottom: 10px;
     border: 3px solid #000;
   }
-  &__number {
-    text-align: center;
-    border: none;
-    outline: none;
 
-    &--basic {
-    }
-    &--senior {
-    }
+  &__button {
+    background: none;
+    border: none;
+    font-weight: 400;
+    font-size: 32px;
+    cursor: pointer;
   }
+
   &__price {
-    margin-top: 35px;
-    margin-bottom: 58px;
-    font-weight: 300;
     font-weight: 700;
     font-size: 28px;
     letter-spacing: 1.65px;
+    @include adaptive-clamp("margin-top", 35, 20);
+    @include adaptive-clamp("margin-bottom", 58, 25);
+  }
+
+  &__btn {
+    @media (max-width: em(500)){
+      width: 100%;
+      //display: flex;  
+    }
   }
 }
-.input-container {
-  position: relative;
-  display: block;
-  padding-left: 40px;
-  margin-bottom: 23px;
-  cursor: pointer;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-size: 22px;
-  user-select: none;
-}
-.input-container input {
-  display: none;
-}
-.checkmark {
-  position: absolute;
-  top: 5px;
-  left: 0;
-  height: 17px;
-  width: 17px;
-  background-color: transparent;
-  border: 1px solid #000;
-  border-radius: 50%;
-}
-.checkmark:hover {
-  background-color: #dadada;
+.stapper {
+
+  &__button {
+  }
+
+  &__number {
+    text-align: center;
+  }
+
+  &__number--basic {
+  }
+
+  &__number--senior {
+  }
 }
 
-.checkmark::after {
-  content: "";
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  display: none;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-  background-color: #000;
-}
 
-.tickets input:checked ~ .checkmark:after {
-  display: block;
-}
-.amount button {
-  background: none;
-  border: none;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-weight: 400;
-  font-size: 32px;
-  cursor: pointer;
-}
 
