--- a/src/styles/blocks/video/_main-video.scss
+++ b/src/styles/blocks/video/_main-video.scss
@@ -38,7 +38,8 @@
       padding: 15px 40px;
     }
     @media (max-width: 768px){
-      padding: 15px 30px 10px 30px;
+      padding: 15px 16px 10px 16px;
+      column-gap: 10px;
       position: relative;
     }
   }
@@ -73,8 +74,11 @@
     }
     @media (max-width: 768px){
        width: 80px;
-       height: 80px; 
-       
+       height: 80px;        
+    }
+    @media (max-width: 550px){
+       width: 60px;
+       height: 60px;        
     }
   }
 
@@ -145,7 +149,7 @@
   &__volume {
     width: 11%;
     @media (max-width: 768px){
-      width: 80%;
+      width: 65%;
     }
   }
 
