--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,8 @@
 // @use 'config/icons';
 
 // use swiper style
-@use 'swiper/css';
+ @use 'swiper/css';
+ @use 'swiper/css/effect-cube';
 // @use 'swiper/css/navigation';
 // @use 'swiper/css/pagination';
 
@@ -10,7 +11,7 @@
  @use 'config/variables';
  @use 'config/css-variables';
  @use 'config/reset';
- @use 'config/setting';
+ @use 'config/setting';  
 
  @use 'base/base';
 
