--- a/src/styles/base/_stepper.scss
+++ b/src/styles/base/_stepper.scss
@@ -2,3 +2,23 @@
 //@use './../config/functions' as *;
 //@use './../config/mixins' as *;
 
+.stapper{
+  width: 105px;
+  border: 1px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  &__button {
+    width: 35px;
+    height: 25px;
+    background-color: var(--c-dark);
+    color: var(--c-white);
+    cursor: pointer;
+  }
+
+  &__number {
+    width: 35px;
+    height: 25px;
+    color: var(--c-dark);    
+  }
+}
